Bug 287190 - including @yahoo.com as part of Yahoo! account username breaks login
Summary: including @yahoo.com as part of Yahoo! account username breaks login
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-21 20:43 UTC by chris
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chris 2011-11-21 20:43:57 UTC
Entering Yahoo! username does not require the @yahoo.com extension -- just the first part of the email address before the @. It will actually fail if you include @yahoo.com
Comment 1 Martin Klapetek 2011-11-30 12:57:17 UTC
Git commit 6f9835a0ae589c9065b431b69b3e5961ac5a6dd0 by Martin Klapetek.
Committed on 30/11/2011 at 13:55.
Pushed by mklapetek into branch 'master'.

Automatically remove @yahoo.* part from Yahoo! account if user enteres it

REVIEW: 103281
BUG: 287190

M  +18   -0    plugins/haze/yahoo-main-options-widget.cpp
M  +3    -0    plugins/haze/yahoo-main-options-widget.h

http://commits.kde.org/telepathy-accounts-kcm/6f9835a0ae589c9065b431b69b3e5961ac5a6dd0