Automatically remove @yahoo.* part from Yahoo! account if user enteres it

REVIEW: 103281
BUG: 287190